fixed some styles and implemented lenis

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,26 @@
   ::selection {
     @apply bg-primary-light text-light;
   }
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-dark;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply rounded-sm bg-light/25;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-light/50;
+  }
   html {
     font-family: "Roboto", sans-serif;
   }
   body {
-    scroll-behavior: smooth;
+    scroll-behavior: auto !important;
   }
 
   h1,
