--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,7 +87,7 @@
   .display-4 {
     @apply text-2xl;
   }
-
+  /* 
   sub,
   sup {
     position: relative;
@@ -233,7 +233,7 @@
     );
     background-size: 2em 2em;
     opacity: 1;
-  }
+  } */
 }
 
 @layer utilities {
@@ -242,9 +242,9 @@
   }
 }
 
-.pattern-box {
+/* .pattern-box {
   opacity: 0.2;
   background-image: linear-gradient(#00000030 1px, transparent 1px),
     linear-gradient(to right, #00000030 1px, #e5e5f7 1px);
   background-size: 20px 20px;
-}
+} */
